creusot/tests/should_fail/prusti/blocked_lifetime/clause2.stderr
error[creusot]: invalid mut dereference of zombie expression with lifetime `'a` in state `'curr`
 --> clause2.rs:4:12
  |
4 | #[ensures(*x == 0u32)]
  |            ^

error: aborting due to previous error

